...

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.sam.gogozoo.homepage.HomeFragment">


            <androidx.fragment.app.FragmentContainerView
...
                android:layout_height="match_parent"
                tools:context="com.infogird.www.location_button_reposition.MapFragment">

            </androidx.fragment.app.FragmentContainerView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/buttonMyLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"
                android:clickable="true"
                app:backgroundTint="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/rcyFacility"
                app:layout_constraintEnd_toEndOf="parent"
                app:maxImageSize="32dp"
                app:rippleColor="@color/colorPrimary"
                app:srcCompat="@drawable/icon_mylocation2" />

            <androidx.appcompat.widget.AppCompatTextView
...
                android:visibility="@{viewModel.showRouteInfo == true &amp; viewModel.needfocus == false ? View.VISIBLE : View.GONE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintRoute" />

            <com.leinardi.android.speeddial.SpeedDialView
                android:id="@+id/speedDial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                app:sdMainFabClosedBackgroundColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/buttonMyLocation"
                app:layout_constraintEnd_toEndOf="parent"
                app:sdMainFabClosedSrc="@drawable/icon_fab_selector" >

            </com.leinardi.android.speeddial.SpeedDialView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcyHomeTop"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="52dp"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
...
                android:text="@string/clear"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonBack" />

            <com.github.angads25.toggle.widget.LabeledSwitch
                android:id="@+id/switchMarkers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textSize="12sp"
                app:colorBorder="@color/colorPrimaryDark"
                app:colorOn="@color/colorPrimaryDark"
...
                app:layout_constraintStart_toStartOf="parent"
                tools:listitem="@layout/item_home_facility">

            </androidx.recyclerview.widget.RecyclerView>

            <ImageButton
                android:id="@+id/imageCloseFac"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/transparent"
                android:scaleType="centerCrop"
...
                tools:listitem="@layout/item_friend" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_dialog"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/bottom_background2"
            android:orientation="vertical"
            app:behavior_hideable="false"
            app:behavior_peekHeight="20dp"
...
                        app:layout_constraintBottom_toTopOf="@+id/textNoRoute"
                        app:layout_constraintEnd_toEndOf="@+id/textNoRoute"
                        app:layout_constraintStart_toStartOf="@+id/textNoRoute"
                        app:srcCompat="@drawable/icon_no_route" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rcy_schedule"
                        android:layout_width="380dp"
                        android:layout_height="0dp"
                        android:layout_marginTop="8dp"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
...
                app:layout_constraintEnd_toStartOf="@+id/buttonShare"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                tools:listitem="@layout/item_friend_route" />

            <ImageButton
                android:id="@+id/buttonEdit"
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@color/transparent"
                android:onClick="@{() -> viewModel.edit()}"
...
