...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="@{() -> viewModel.leave()}"
        tools:context="com.sam.gogozoo.info.InfoDialog">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/infoDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/bottom_background"
            android:onClick="@{() -> viewModel.nothing()}"
...
                android:layout_marginStart="32dp"
                android:layout_marginEnd="8dp"
                android:singleLine="true"
                android:text="@string/mark_title"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageIcon"
                app:layout_constraintEnd_toStartOf="@+id/buttonancel"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/imageIcon"
                app:layout_constraintTop_toTopOf="@+id/imageIcon"
                tools:ignore="HardcodedText"
                tools:text="@string/mark_title" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/buttonNav"
                style="@style/TextStyle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/frame_info_buttonl"
...
                android:text="@string/see_info"
                android:textColor="@color/colorPrimaryDark"
                app:cornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/buttonNav"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/buttonRoute"
                app:layout_constraintTop_toBottomOf="@+id/imageIcon" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/buttonRoute"
                style="@style/TextStyle2"
                android:layout_width="wrap_content"
...
