...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.drawerlayout.widget.DrawerLayout
            android:id="@+id/drawerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity">


                <androidx.appcompat.widget.Toolbar
...
                    app:layout_constraintBottom_toTopOf="@+id/bottomNavView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:background="@color/colorDivider"/>

                <ImageView
                    android:id="@+id/buttonSearch"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginEnd="40dp"
                    android:padding="8dp"
                    android:visibility="@{viewModel.currentFragmentType == CurrentFragmentType.HOME ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="@+id/toolbar"
...
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/dino_loading" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.sam.gogozoo.stepcount.DragFloatActionButton
            android:id="@+id/layoutStepCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="180dp"
            android:paddingHorizontal="5dp"
            android:paddingVertical="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
...
